crates/aura-macros/tests/trybuild/incoherent_self_send.stderr
error: Coherence validation failed: Coherence validation failed for choreography `IncoherentSelfSend`.
       Failed predicates: action (sender and receiver must differ).
       Deterministic initial_delivery_env channels: [Alice->Alice:Loopback=0].
       Hint: ensure choice branches are mergeable for non-participants and avoid self-sends.
 --> tests/trybuild/incoherent_self_send.rs:3:15
  |
3 |   choreography!(r#"
  |  _______________^
4 | | module incoherent_self_send exposing (IncoherentSelfSend)
5 | |
6 | | protocol IncoherentSelfSend =
7 | |   roles Alice
8 | |   Alice -> Alice : Loopback
9 | | "#);
  | |__^
